--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
    "type": "commonjs",
    "devDependencies": {
       "@types/express": "^4.17.21",
+      "@types/jsonwebtoken": "^9.0.6",
       "@types/node": "^16.11.10",
       "@types/sha1": "^1.1.5",
       "ts-node": "10.9.1",
