--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "typescript": "4.5.2"
   },
   "dependencies": {
+    "@vercel/node": "^3.2.1",
     "bcrypt": "^5.1.1",
     "chai": "^5.1.1",
     "config": "^3.3.12",
